# Self-healing-localization

./: CHANGELOG.md  README.md  pyproject.toml
docs/: index.md  installation.md
docs/api/: ai_translation.md  engine.md
docs/concepts/: file_structure.md  localization_engine.md  self_healing.md
docs/examples/: full_demo.md  sync.md
docs/guides/: adding_languages.md  syncing_languages.md  templates.md
docs/v1/fi/: Matka-SHL:n-taakse.md  SUMMARY.md  readme.md
docs/v1/fi/architecture/: adapters.md  engine.md  healer.md  middleman_logic.md
docs/v1/fi/data/: ui_schema.md
docs/v1/fi/journey/: osa-0.md  osa-2.md  osa-3.md  osa-4.md  osa-6.md  osa-7.md  osa-9.md
shl/: ai_translation.py  engine.py  localizer.py  template_localizer.py
shl/adapters/: README.md  base.py  flet_adapter.py  playwright_ui_tree_builder.py  pyqt6_adapter.py
shl/core/: language_manager.py
shl/diff/: blueprint_diff.py  diff_blueprints.py
shl/healer/: README.md  healer_engine_old.py  healer_log.py  healer_logger.py  healer_memory.py  healer_stats.py
shl/middleman/: README.md  manager.py  user_middleman.py
shl/registry/: SHL_Component_Registry.experimental.yaml  patcher_safe.py  readme.md  ucr.json  ucr_loader.py  ucr_schema.json  ucr_to_blueprint.py  ucr_validator.py
shl/ui/components/: README.md  SHLComponent.py
shl/ui_tree/: ui_node.py  ui_tree_builder.py
shl/utils/: README.md
