[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "self-healing-localization"
version = "0.1.1"
description = "A self-healing localization layer for Python applications, automatically creating missing language files and keys."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Tuomas Lähteenmäki" }
]

keywords = [
    "localization",
    "i18n",
    "internationalization",
    "translation",
    "templates",
    "self-healing",
    "automation",
    "python"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Internationalization",
    "Topic :: Software Development :: Libraries",
]

dependencies = []

[project.urls]
Homepage = "https://github.com/lahtis/Self-healing-localization"
Repository = "https://github.com/lahtis/Self-healing-localization"
Issues = "https://github.com/lahtis/Self-healing-localization/issues"

[tool.setuptools]
packages = { find = { where = ["."] } }
